# hlop

./: .bazelrc  .gitignore  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE
benchref/: BUILD  lconst.cpp  lconst.hpp  lrand.hpp  uint.hpp  woothash.hpp
benchref/sample/: BUILD  README.md  golden_hash_100k.txt  run_bench.sh  sample_hash.hpp
benchref/sample/cpp_native/: Makefile  sample1_stage.cpp  sample1_stage.hpp  sample2_stage.cpp  sample2_stage.hpp  sample3_stage.cpp  sample3_stage.hpp  sample_stage.cpp
benchref/sample/cpp_oldprp/: Makefile  Sample_Stage1.cpp  Sample_Stage1.h  Sample_Stage2.cpp  Sample_Stage2.h  Sample_Stage3.cpp  Sample_Stage3.h  Stage.h  main.cpp
benchref/sample/dlop/: main.cpp  sample1_stage.cpp  sample1_stage.hpp  sample2_stage.cpp  sample2_stage.hpp  sample3_stage.cpp  sample3_stage.hpp  sample_stage.cpp  sample_stage.hpp
benchref/sample/simlib/: Makefile  main.cpp  main_vcd_writer.cpp  sample1_stage.cpp  sample1_stage.hpp  sample2_stage.cpp  sample2_stage.hpp  sample3_stage.cpp  sample3_stage.hpp  sample_stage.cpp  sample_stage.hpp
benchref/sample/simlib_raw/: Makefile  sample1_stage.cpp  sample1_stage.hpp  sample2_stage.cpp  sample2_stage.hpp  sample3_stage.cpp  sample3_stage.hpp  sample_stage.cpp  sample_stage.hpp
benchref/sample/slop/: main.cpp  sample1_stage.cpp  sample1_stage.hpp  sample2_stage.cpp  sample2_stage.hpp  sample3_stage.cpp  sample3_stage.hpp  sample_stage.cpp
benchref/sample/verilog_icarus/: Makefile
benchref/sample/verilog_vcs/: Makefile  sample.v
benchref/sample/verilog_verilator/: Makefile  dut_sample.cpp  sample2.v  sample3.v
benchref/sample/verilog_verilator/obj_dir_vcd/: Vsample  Vsample.cpp  Vsample.h  Vsample.mk  Vsample__ALL.cpp  Vsample__Dpi.cpp  Vsample__Dpi.h  Vsample__Syms.h  Vsample__Syms__Slow.cpp  Vsample__TraceDecls__0__Slow.cpp  Vsample__Trace__0.cpp  Vsample__Trace__0__Slow.cpp  Vsample___024root.h  Vsample___024root__0.cpp  Vsample___024root__0__Slow.cpp  Vsample___024root__Slow.cpp  Vsample__pch.h  Vsample_classes.mk
benchref/sample/verilog_yosys/: Makefile  main.cpp  sample.v  sample1.v
benchref/tests/: cross_test.cpp  lconst_bench.cpp  lconst_test.cpp  lconst_test2.cpp
hlop/: BUILD  blop.hpp  checkpoint.hpp  dcontext.cpp  dcontext.hpp  dlop.cpp  dlop.hpp  eval.hpp  likely.hpp  slop.hpp  spsc.hpp  vcd_writer.cpp  vcd_writer.hpp
hlop/tests/: blop_test.cpp  checkpoint_test.cpp  cross_test.cpp  dlop_robust_check.cpp  dlop_test.cpp  eval_test.cpp  format_api_test.cpp  lconst_test.cpp  slop_dlop_diff_test.cpp  slop_dlop_wide_test.cpp  slop_sint_diff_test.cpp  slop_test.cpp
interactive_app/: package.json
interactive_app/src/Lconst/: package.json
