###############################################################################
module(
    name = "hlop",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.1.1")

bazel_dep(name = "abseil-cpp", version = "20250127.2") # 20240722.0.bcr.2")

bazel_dep(name = "boost.multiprecision", version = "1.87.0")

bazel_dep(name = "fmt", version = "11.1.4")

bazel_dep(name = "googletest", version = "1.16.0", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")

# iassert
bazel_dep(name = "iassert", version = "0.1.0")

archive_override(
    module_name = "iassert",
    integrity = "sha256-lHlDknD8QsWKOVnXql7NIH6/C76SEOHRe0JlMPCwlrI=",
    strip_prefix = "iassert-c2136ed8809ec1addbc48eb836c58d5b895e3f2b",
    urls = [
        "https://github.com/masc-ucsc/iassert/archive/c2136ed8809ec1addbc48eb836c58d5b895e3f2b.zip",
    ],
)
