###############################################################################
module(
    name = "hlop",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "abseil-cpp", version = "20250814.2") # 20240722.0.bcr.2")

bazel_dep(name = "boost.multiprecision", version = "1.87.0")

bazel_dep(name = "fmt", version = "11.2.0.bcr.1")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")

# iassert
bazel_dep(name = "iassert", version = "0.1.0")
local_path_override(
    module_name = "iassert",
    path = "../iassert",
)
