###############################################################################
module(
    name = "hlop",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.2.22")

bazel_dep(name = "abseil-cpp", version = "20250814.2") # 20240722.0.bcr.2")

bazel_dep(name = "boost.multiprecision", version = "1.90.0.bcr.1")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")

# iassert
bazel_dep(name = "iassert", version = "0.1.1")

archive_override(
    module_name = "iassert",
    integrity = "sha256-sMOp2bzYfLhVMYfFoliGIXKHAi3bZpTVTSD+2oXjMp8=",
    strip_prefix = "iassert-0460fbd8405a96b3615be425df9066eba835fcf0",
    urls = [
        "https://github.com/masc-ucsc/iassert/archive/0460fbd8405a96b3615be425df9066eba835fcf0.zip",
    ],
)
